--------------------------------------------------------------------------------------------------
Release notes version 1.8.3_beta : Enhancements, modifications and corrected bugs since version 1.8.2 :
--------------------------------------------------------------------------------------------------
03/03/21 (TrioCFD) Doc         : Update of models description (Phase Field, ALE and Sensitivity Analysis)
05/02/21 (TrioCFD) New keyword : Boundary_field_keps_from_ud to specify a K-Eps inlet field with hydraulic diameter, speed, and turbulence intensity (VDF only)
27/01/21 (TrioCFD) Major change: Restructuration - Rayonnement contains now Rayonnement (milieu transparent) + Rayonnement_semi_transparent
27/01/21 (TrioCFD) Major change: Restructuration - Turbulence contains now LES validation sheets and Bas_Reynolds
15/01/21 (TrioCFD) New feature : New documentation available: development plan and models description
--------------------------------------------------------------------------------------------------
Release notes version 1.8.2 : Enhancements, modifications and corrected bugs since version 1.8.1 :
--------------------------------------------------------------------------------------------------
11/12/20 (TrioCFD) New feature : New documentation available: validation report - first version
19/11/20 (TrioCFD) Validation  : Update test cases after syntax change for Champ_Fonc_Fonction, Champ_Fonc_Fonction_txyz, Champ_Fonc_Tabule,Champ_Fonc_Fonction_txyz_Morceaux in TRUST
17/11/20 (TrioCFD) New feature : Triocfd -index gives now access to html index of TrioCFD.
17/11/20 (TrioCFD) New feature : Adding triocfd script that overloads trust script.
16/11/20 (TrioCFD) New feature : New baltik Sensitivity_analysis : provide an estimate of the variance of the velocity field in NS
10/11/20 (TrioCFD) Validation  : Add 2 validation sheets for ALE Baltik : DIVA and TwoOscillatingCylindersALE